package org.kie.kogito.index.model;

option indexed_by_default = true;

/* @Indexed */
message ProcessInstanceMeta {
    /* @Field(store = Store.YES, analyze = Analyze.YES, analyzer = @Analyzer(definition = "keyword")) */
    optional string id = 1;
    /* @Field(store = Store.YES, analyze = Analyze.YES) */
    optional string processId = 2;
    /* @Field(store = Store.YES, analyze = Analyze.YES) */
    repeated string roles = 3;
    /* @Field(store = Store.YES, analyze = Analyze.YES) */
    optional string endpoint = 4;
    /* @Field(store = Store.YES, analyze = Analyze.YES) */
    optional int32 state = 5;
    optional int64 start = 6;
    optional int64 end = 7;
    /* @Field(store = Store.YES, analyze = Analyze.YES, analyzer = @Analyzer(definition = "keyword")) */
    optional string rootProcessInstanceId = 8;
    /* @Field(store = Store.YES, analyze = Analyze.YES) */
    optional string rootProcessId = 9;
    /* @Field(store = Store.YES, analyze = Analyze.YES, analyzer = @Analyzer(definition = "keyword")) */
    optional string parentProcessInstanceId = 10;
    /* @Field(store = Store.YES, analyze = Analyze.YES) */
    optional string processName = 11;
}

/* @Indexed */
message ProcessInstance {
    /* @Field(store = Store.YES, analyze = Analyze.YES, analyzer = @Analyzer(definition = "keyword")) */
    optional string id = 1;
    /* @Field(store = Store.YES, analyze = Analyze.YES) */
    optional string processId = 2;
    /* @Field(store = Store.YES, analyze = Analyze.YES) */
    repeated string roles = 3;
    optional string variables = 4;
    /* @Field(store = Store.YES, analyze = Analyze.YES) */
    optional string endpoint = 5;
    repeated NodeInstance nodes = 6;
    /* @Field(store = Store.YES, analyze = Analyze.YES) */
    optional int32 state = 7;
    optional int64 start = 8;
    optional int64 end = 9;
    /* @Field(store = Store.YES, analyze = Analyze.YES, analyzer = @Analyzer(definition = "keyword")) */
    optional string rootProcessInstanceId = 10;
    /* @Field(store = Store.YES, analyze = Analyze.YES) */
    optional string rootProcessId = 11;
    /* @Field(store = Store.YES, analyze = Analyze.YES, analyzer = @Analyzer(definition = "keyword")) */
    optional string parentProcessInstanceId = 12;
    /* @Field(store = Store.YES, analyze = Analyze.YES) */
    optional string processName = 13;
}

/* @Indexed */
message NodeInstance {
    /* @Field(store = Store.YES, analyze = Analyze.YES, analyzer = @Analyzer(definition = "keyword")) */
    optional string id = 1;
    /* @Field(store = Store.YES, analyze = Analyze.YES) */
    optional string name = 2;
    /* @Field(store = Store.YES, analyze = Analyze.YES) */
    optional string type = 3;
    optional int64 enter = 4;
    optional int64 exit = 5;
    /* @Field(store = Store.YES, analyze = Analyze.YES) */
    optional string definitionId = 6;
    /* @Field(store = Store.YES, analyze = Analyze.YES) */
    optional string nodeId = 7;
}

/* @Indexed */
message UserTaskInstance {
    /* @Field(store = Store.YES, analyze = Analyze.YES, analyzer = @Analyzer(definition = "keyword")) */
    optional string id = 1;
    /* @Field(store = Store.YES, analyze = Analyze.YES) */
    optional string description = 2;
    /* @Field(store = Store.YES, analyze = Analyze.YES) */
    optional string name = 3;
    /* @Field(store = Store.YES, analyze = Analyze.YES) */
    optional string priority = 4;
    /* @Field(store = Store.YES, analyze = Analyze.YES, analyzer = @Analyzer(definition = "keyword")) */
    optional string processInstanceId = 5;
    /* @Field(store = Store.YES, analyze = Analyze.YES) */
    optional string processId = 6;
    /* @Field(store = Store.YES, analyze = Analyze.YES, analyzer = @Analyzer(definition = "keyword")) */
    optional string rootProcessInstanceId = 7;
    /* @Field(store = Store.YES, analyze = Analyze.YES) */
    optional string rootProcessId = 8;
    /* @Field(store = Store.YES) */
    optional string state = 9;
    /* @Field(store = Store.YES, analyze = Analyze.YES) */
    optional string actualOwner = 10;
    /* @Field(store = Store.YES) */
    repeated string adminGroups = 11;
    /* @Field(store = Store.YES) */
    repeated string adminUsers = 12;
    optional int64 completed = 13;
    optional int64 started = 14;
    /* @Field(store = Store.YES) */
    repeated string excludedUsers = 15;
    /* @Field(store = Store.YES) */
    repeated string potentialGroups = 16;
    /* @Field(store = Store.YES) */
    repeated string potentialUsers = 17;
    optional string inputs = 18;
    optional string outputs = 19;
    /* @Field(store = Store.YES, analyze = Analyze.YES) */
    optional string referenceName = 20;
}

/* @Indexed */
message UserTaskInstanceMeta {
    /* @Field(store = Store.YES, analyze = Analyze.YES, analyzer = @Analyzer(definition = "keyword")) */
    optional string id = 1;
    /* @Field(store = Store.YES, analyze = Analyze.YES) */
    optional string description = 2;
    /* @Field(store = Store.YES, analyze = Analyze.YES) */
    optional string name = 3;
    /* @Field(store = Store.YES, analyze = Analyze.YES) */
    optional string priority = 4;
    /* @Field(store = Store.YES, analyze = Analyze.YES, analyzer = @Analyzer(definition = "keyword")) */
    optional string processInstanceId = 5;
    /* @Field(store = Store.YES) */
    optional string state = 6;
    /* @Field(store = Store.YES, analyze = Analyze.YES) */
    optional string actualOwner = 7;
    /* @Field(store = Store.YES) */
    repeated string adminGroups = 8;
    /* @Field(store = Store.YES) */
    repeated string adminUsers = 9;
    optional int64 completed = 10;
    optional int64 started = 11;
    /* @Field(store = Store.YES) */
    repeated string excludedUsers = 12;
    /* @Field(store = Store.YES) */
    repeated string potentialGroups = 13;
    /* @Field(store = Store.YES) */
    repeated string potentialUsers = 14;
    /* @Field(store = Store.YES, analyze = Analyze.YES) */
    optional string referenceName = 15;
}